test/mpi/errors/cxx/Makefile.am
##
## Copyright (C) by Argonne National Laboratory
##     See COPYRIGHT in top-level directory
##

include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist.in

SUBDIRS = $(iodir) errhan
DIST_SUBDIRS = io errhan

